--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 							<div class="card card-6 col-sm-2"><img src="images/cards/cdeck.png" /></div>
 						</div>
 					</div> <!-- dealer-hand-wrapper -->
+					<!-- <div class="col-sm-3"><img src="images/cards/fullcards.png"/></div> -->
+					<div class="col-sm-12"><img src="images/casino-royale.png"/></div>
 					<div class="player-hand-wrapper col-sm-12">
 						<div class="col-sm-2">
 							Player Total: <span class="player-total">0</span>
@@ -48,21 +50,24 @@
 							<button class="btn btn-primary deal-button">Deal</button>
 						</div>
 						<div class="col-sm-2 col-sm-offset-1">
-							<button class="btn btn-danger hit-button">Hit</button>
+							<button class="btn btn-primary hit-button">Hit</button>
 						</div>
 						<div class="col-sm-2 col-sm-offset-1">
-							<button class="btn btn-success stand-button">Stand</button>
+							<button class="btn btn-primary stand-button">Stand</button>
 						</div>		
 
 
 						<div class="col-sm-2 col-sm-offset-3">
-							<button class="btn btn-primary deal-button">Bet 1</button>
+							<button class="btn btn-danger bet1-button">Bet 1</button>
+							<img src="images/whitechip.png"/>
 						</div>
 						<div class="col-sm-2 col-sm-offset-1">
-							<button class="btn btn-danger hit-button">Bet 5</button>
+							<button class="btn btn-danger bet5-button">Bet 5</button>
+							<img src="images/bondchipred1.png"/>
 						</div>
 						<div class="col-sm-2 col-sm-offset-1">
-							<button class="btn btn-success stand-button">Bet 10</button>
+							<button class="btn btn-danger bet10-button">Bet 10</button>
+							<img src="images/2casinochip.png"/>
 						</div>		
 					</div> <!-- the-buttons -->
 				</div> <!-- another row -->
