--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-
+<!-- <div class="bg"></div> --> <!-- for full background cover -->
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12 the-table">
@@ -30,8 +30,8 @@
 							<div class="card card-6 col-sm-2"><img src="images/cards/cdeck.png" /></div>
 						</div>
 					</div> <!-- dealer-hand-wrapper -->
-					<!-- <div class="col-sm-3"><img src="images/cards/fullcards.png"/></div> -->
-					<div class="col-sm-12"><img src="images/casino-royale.png"/></div>
+					<div class="col-sm-8"><img src="images/casino-royale.png "/></div>
+					<div class="col-sm-4"><img src="images/jblogo.png "/></div>
 					<div class="player-hand-wrapper col-sm-12">
 						<div class="col-sm-2">
 							Player Total: <span class="player-total">0</span>
