--- a/index.html
+++ b/index.html
@@ -22,38 +22,39 @@
 							Dealer Total: <span class="dealer-total">0</span>
 						</div>
 						<div class="col-sm-10 dealer-cards">
-							<div class="card card-1 col-sm-2"><img src="images/cards/cdeck.png" /></div>
-							<div class="card card-2 col-sm-2"><img src="images/cards/cdeck.png" /></div>
-							<div class="card card-3 col-sm-2"><img src="images/cards/cdeck.png" /></div>
-							<div class="card card-4 col-sm-2"><img src="images/cards/cdeck.png" /></div>
-							<div class="card card-5 col-sm-2"><img src="images/cards/cdeck.png" /></div>
-							<div class="card card-6 col-sm-2"><img src="images/cards/cdeck.png" /></div>
+							<div class="card card-1 col-sm-2"><img src="images/cards/jbdeckred.png" /></div>
+							<div class="card card-2 col-sm-2"><img src="images/cards/jbdeckred.png" /></div>
+							<div class="card card-3 col-sm-2"><img src="images/cards/jbdeckred.png" /></div>
+							<div class="card card-4 col-sm-2"><img src="images/cards/jbdeckred.png" /></div>
+							<div class="card card-5 col-sm-2"><img src="images/cards/jbdeckred.png" /></div>
+							<div class="card card-6 col-sm-2"><img src="images/cards/jbdeckred.png" /></div>
 						</div>
 					</div> <!-- dealer-hand-wrapper -->
 					<div class="col-sm-8"><img src="images/casino-royale.png "/></div>
 					<div class="col-sm-4"><img src="images/jblogo.png "/></div>
 					<div class="player-hand-wrapper col-sm-12">
+						<!-- The James Bond Logo Middle Section -->
 						<div class="col-sm-2">
 							Player Total: <span class="player-total">0</span>
 						</div>
 						<div class="col-sm-10 player-cards">
-							<div class="card card-1 col-sm-2"><img src="images/cards/cdeck.png" /></div>
-							<div class="card card-2 col-sm-2"><img src="images/cards/cdeck.png" /></div>
-							<div class="card card-3 col-sm-2"><img src="images/cards/cdeck.png" /></div>
-							<div class="card card-4 col-sm-2"><img src="images/cards/cdeck.png" /></div>
-							<div class="card card-5 col-sm-2"><img src="images/cards/cdeck.png" /></div>
-							<div class="card card-6 col-sm-2"><img src="images/cards/cdeck.png" /></div>
+							<div class="card card-1 col-sm-2"><img src="images/cards/jbdeckred.png" /></div>
+							<div class="card card-2 col-sm-2"><img src="images/cards/jbdeckred.png" /></div>
+							<div class="card card-3 col-sm-2"><img src="images/cards/jbdeckred.png" /></div>
+							<div class="card card-4 col-sm-2"><img src="images/cards/jbdeckred.png" /></div>
+							<div class="card card-5 col-sm-2"><img src="images/cards/jbdeckred.png" /></div>
+							<div class="card card-6 col-sm-2"><img src="images/cards/jbdeckred.png" /></div>
 						</div>
 					</div> <!-- player-hand-wrapper -->
 					<div class="the-buttons">
 						<div class="col-sm-2 col-sm-offset-3">
-							<button class="btn btn-primary deal-button">Deal</button>
+							<button class="btn btn-default deal-button">Deal</button>
 						</div>
 						<div class="col-sm-2 col-sm-offset-1">
-							<button class="btn btn-primary hit-button">Hit</button>
+							<button class="btn btn-default hit-button">Hit</button>
 						</div>
 						<div class="col-sm-2 col-sm-offset-1">
-							<button class="btn btn-primary stand-button">Stand</button>
+							<button class="btn btn-default stand-button">Stand</button>
 						</div>		
 
 
