--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 							Dealer Total: <span class="dealer-total">0</span>
 						</div>
 						<div class="col-sm-10 dealer-cards">
-							<div class="card card-1 col-sm-2"><img src="images/cards/jbdeckred.png" /></div>
-							<div class="card card-2 col-sm-2"><img src="images/cards/jbdeckred.png" /></div>
-							<div class="card card-3 col-sm-2"><img src="images/cards/jbdeckred.png" /></div>
-							<div class="card card-4 col-sm-2"><img src="images/cards/jbdeckred.png" /></div>
-							<div class="card card-5 col-sm-2"><img src="images/cards/jbdeckred.png" /></div>
-							<div class="card card-6 col-sm-2"><img src="images/cards/jbdeckred.png" /></div>
+							<div class="card card-1 col-sm-2 card-holder"><img src="images/cards/jbdeckred.png" /></div>
+							<div class="card card-2 col-sm-2 card-holder"><img src="images/cards/jbdeckred.png" /></div>
+							<div class="card card-3 col-sm-2 card-holder"><img src="images/cards/jbdeckred.png" /></div>
+							<div class="card card-4 col-sm-2 card-holder"><img src="images/cards/jbdeckred.png" /></div>
+							<div class="card card-5 col-sm-2 card-holder"><img src="images/cards/jbdeckred.png" /></div>
+							<div class="card card-6 col-sm-2 card-holder"><img src="images/cards/jbdeckred.png" /></div>
 						</div>
 					</div> <!-- dealer-hand-wrapper -->
 					<div class="col-sm-8"><img src="images/casino-royale.png "/></div>
@@ -36,14 +36,15 @@
 						<!-- The James Bond Logo Middle Section -->
 						<div class="col-sm-2">
 							Player Total: <span class="player-total">0</span>
+							Bet Total: <span class="bet-total">0</span>
 						</div>
 						<div class="col-sm-10 player-cards">
-							<div class="card card-1 col-sm-2"><img src="images/cards/jbdeckred.png" /></div>
-							<div class="card card-2 col-sm-2"><img src="images/cards/jbdeckred.png" /></div>
-							<div class="card card-3 col-sm-2"><img src="images/cards/jbdeckred.png" /></div>
-							<div class="card card-4 col-sm-2"><img src="images/cards/jbdeckred.png" /></div>
-							<div class="card card-5 col-sm-2"><img src="images/cards/jbdeckred.png" /></div>
-							<div class="card card-6 col-sm-2"><img src="images/cards/jbdeckred.png" /></div>
+							<div class="card card-1 col-sm-2 card-holder"><img src="images/cards/jbdeckred.png" /></div>
+							<div class="card card-2 col-sm-2 card-holder"><img src="images/cards/jbdeckred.png" /></div>
+							<div class="card card-3 col-sm-2 card-holder"><img src="images/cards/jbdeckred.png" /></div>
+							<div class="card card-4 col-sm-2 card-holder"><img src="images/cards/jbdeckred.png" /></div>
+							<div class="card card-5 col-sm-2 card-holder"><img src="images/cards/jbdeckred.png" /></div>
+							<div class="card card-6 col-sm-2 card-holder"><img src="images/cards/jbdeckred.png" /></div>
 						</div>
 					</div> <!-- player-hand-wrapper -->
 					<div class="the-buttons">
