--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 							<div class="card card-6 col-sm-2 card-holder"><img src="images/cards/jbdeckred.png" /></div>
 						</div>
 					</div> <!-- dealer-hand-wrapper -->
-					<div class="col-sm-8"><img src="images/casino-royale.png "/></div>
-					<div class="col-sm-4"><img src="images/jblogo.png "/></div>
-					<div class="player-hand-wrapper col-sm-12">
-						<!-- The James Bond Logo Middle Section -->
+					<div class="col-sm-12 text-center"><img src="images/casino-royale.png "/></div>
+					<!-- <div class="col-sm-4"><img src="images/jblogo.png "/></div> -->
+					<!-- The James Bond Logo Middle Section -->
+					<div class="player-hand-wrapper col-sm-12">						
 						<div class="col-sm-2">
 							Player Total: <span class="player-total">0</span>
 							Bet Total: <span class="bet-total">0</span>
